--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,11 @@
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
+html {
+	background-color: #85E0E0;
+	font-family: 'PT Sans', sans-serif;
+	color: #fff;
+}
+a {
+	text-decoration: none;
+	color: #fff;
+}
