Changing up the styling on the main page a little bit
- Put dates under the post titles
- Found out the font from the styles file wasn’t being applied because
of material so fixed that
- Padding around post list

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,15 @@
 <header></header>
 <mat-list class="post-list">
-  <a mat-list-item><i>11.23.2017</i>&nbsp;- That time I made a turkey</a>
-  <a mat-list-item><i>11.21.2017</i>&nbsp;- That time I made the animation of the router work better</a>
-  <a mat-list-item><i>11.20.2017</i>&nbsp;- That time I started a blog</a>
+  <a mat-list-item>
+    <h2 mat-line>That time I made a turkey</h2>
+    <p mat-line><i>11.23.2017</i></p>
+  </a>
+  <a mat-list-item>
+    <h2 mat-line>That time I made the animation of the router work better</h2>
+    <p mat-line><i>11.21.2017</i></p>
+  </a>
+  <a mat-list-item>
+    <h2 mat-line>That time I started a blog</h2>
+    <p mat-line><i>11.20.2017</i></p>
+  </a>
 </mat-list>
