--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,8 @@
+.post-list {
+	padding: 20px 40px 0px 40px;
+}
 .post-list a {
 	color: #fff;
+	font-family: 'PT Sans', sans-serif;
+	font-size: 20px;
 }
