Responsive on mobile
- Adjusted width of header image when screen size is 400px or less
- Adjusted padding on list of post links when screen size is 800px or
less

--- a/src/app/header.component.css
+++ b/src/app/header.component.css
@@ -10,3 +10,13 @@
     justify-content: center;
     padding: 20px 0;
 }
+img.logo {
+    max-width: 90%;
+    height: auto;
+}
+
+@media only screen and (min-width: 400px) { /*desktop*/
+    img.logo {
+        width: 400px;
+    }
+}
