--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,5 @@
 <header></header>
-<mat-list class="post-list">
-  <a mat-list-item>
-    <h2 mat-line>I made a turkey</h2>
-    <p mat-line><i>11.23.2017</i></p>
-  </a>
-  <a mat-list-item>
-    <h2 mat-line>I made the router animation work</h2>
-    <p mat-line><i>11.21.2017</i></p>
-  </a>
-  <a mat-list-item>
-    <h2 mat-line>I started a blog</h2>
-    <p mat-line><i>11.20.2017</i></p>
-  </a>
-</mat-list>
+  <div [@routerAnimation]="getRoute(route)">
+      <router-outlet #route="outlet"></router-outlet>
+  </div>
 <footer></footer>
