Rejiggering post handling
- Added post class
- Added post.service - which returns array of posts
- Set Home component to display the array of posts

--- a/src/app/home.component.html
+++ b/src/app/home.component.html
@@ -1,14 +1,6 @@
 <mat-list class="post-list">
-  <a mat-list-item routerLink="/post" routerLinkActive="active">
-    <h2 mat-line>I made a turkey</h2>
-    <p mat-line><i>11.23.2017</i></p>
-  </a>
-  <a mat-list-item routerLink="/post" routerLinkActive="active">
-    <h2 mat-line>I made the router animation work</h2>
-    <p mat-line><i>11.21.2017</i></p>
-  </a>
-  <a mat-list-item routerLink="/post" routerLinkActive="active">
-    <h2 mat-line>I started a blog</h2>
-    <p mat-line><i>11.20.2017</i></p>
+  <a mat-list-item routerLink="/post" routerLinkActive="active" *ngFor="let post of posts">
+    <h2 mat-line>{{post.title}}</h2>
+    <p mat-line><i>{{post.date | date}}</i></p>
   </a>
 </mat-list>
