--- a/src/app/post.component.html
+++ b/src/app/post.component.html
@@ -1,9 +1,9 @@
+<h1>{{post.title}}</h1>
+<h3>{{post.date | date}}</h3>
+
 <div [ngSwitch]="postID">
 
 <div *ngSwitchCase="1">
-<h1>I started a blog</h1>
-<h3>November 20, 2017</h3>
-
 <p>Lorem ipsum dolor sit amet, sit te munere mnesarchum, est eu vidit solet impedit. Discere mandamus quo cu, ad saepe placerat eam, utinam possit mollis ex usu. Tation facilisis constituam vim id, at sea nullam sensibus efficiantur. Ne eum autem adipiscing, solum zril periculis mea ex. Ei dico esse essent eum, qui mucius voluptua cu. Ea per maiorum ancillae lobortis, cum omnis assum constituto an.</p>
 
 <p>Sea possit mandamus ei. Qui delenit ocurreret voluptatibus eu, dicunt accommodare vix an. Ne cibo veritus pro, et propriae maluisset nec. Patrioque eloquentiam te sed. Nam ex iusto graeci, no labitur epicurei efficiendi vis, sint sensibus sadipscing ex has.</p>
@@ -26,9 +26,6 @@
 </div>
 
 <div *ngSwitchCase="2">
-<h1>I made the router animations work</h1>
-<h3>November 21, 2017</h3>
-
 <p>Lorem ipsum dolor sit amet, sit te munere mnesarchum, est eu vidit solet impedit. Discere mandamus quo cu, ad saepe placerat eam, utinam possit mollis ex usu. Tation facilisis constituam vim id, at sea nullam sensibus efficiantur. Ne eum autem adipiscing, solum zril periculis mea ex. Ei dico esse essent eum, qui mucius voluptua cu. Ea per maiorum ancillae lobortis, cum omnis assum constituto an.</p>
 
 <p>Sea possit mandamus ei. Qui delenit ocurreret voluptatibus eu, dicunt accommodare vix an. Ne cibo veritus pro, et propriae maluisset nec. Patrioque eloquentiam te sed. Nam ex iusto graeci, no labitur epicurei efficiendi vis, sint sensibus sadipscing ex has.</p>
@@ -51,9 +48,6 @@
 </div>
 
 <div *ngSwitchCase="3">
-<h1>I made a turkey</h1>
-<h3>November 23, 2017</h3>
-
 <p>Lorem ipsum dolor sit amet, sit te munere mnesarchum, est eu vidit solet impedit. Discere mandamus quo cu, ad saepe placerat eam, utinam possit mollis ex usu. Tation facilisis constituam vim id, at sea nullam sensibus efficiantur. Ne eum autem adipiscing, solum zril periculis mea ex. Ei dico esse essent eum, qui mucius voluptua cu. Ea per maiorum ancillae lobortis, cum omnis assum constituto an.</p>
 
 <p>Sea possit mandamus ei. Qui delenit ocurreret voluptatibus eu, dicunt accommodare vix an. Ne cibo veritus pro, et propriae maluisset nec. Patrioque eloquentiam te sed. Nam ex iusto graeci, no labitur epicurei efficiendi vis, sint sensibus sadipscing ex has.</p>
