--- a/src/app/post.component.html
+++ b/src/app/post.component.html
@@ -3,7 +3,7 @@
 
 <div [ngSwitch]="postID">
 
-<div *ngSwitchCase="1">
+<div *ngSwitchCase="1" class="post">
 <p>Lorem ipsum dolor sit amet, sit te munere mnesarchum, est eu vidit solet impedit. Discere mandamus quo cu, ad saepe placerat eam, utinam possit mollis ex usu. Tation facilisis constituam vim id, at sea nullam sensibus efficiantur. Ne eum autem adipiscing, solum zril periculis mea ex. Ei dico esse essent eum, qui mucius voluptua cu. Ea per maiorum ancillae lobortis, cum omnis assum constituto an.</p>
 
 <p>Sea possit mandamus ei. Qui delenit ocurreret voluptatibus eu, dicunt accommodare vix an. Ne cibo veritus pro, et propriae maluisset nec. Patrioque eloquentiam te sed. Nam ex iusto graeci, no labitur epicurei efficiendi vis, sint sensibus sadipscing ex has.</p>
@@ -25,7 +25,7 @@
 <p>Est modo platonem pertinacia at, te mei nihil choro mentitum. Eam cu facer salutatus. Mel prima apeirian ei. No alterum ancillae mea. At vix suas utinam. Eos ne dissentiunt interpretaris.</p>
 </div>
 
-<div *ngSwitchCase="2">
+<div *ngSwitchCase="2" class="post">
 <p>Lorem ipsum dolor sit amet, sit te munere mnesarchum, est eu vidit solet impedit. Discere mandamus quo cu, ad saepe placerat eam, utinam possit mollis ex usu. Tation facilisis constituam vim id, at sea nullam sensibus efficiantur. Ne eum autem adipiscing, solum zril periculis mea ex. Ei dico esse essent eum, qui mucius voluptua cu. Ea per maiorum ancillae lobortis, cum omnis assum constituto an.</p>
 
 <p>Sea possit mandamus ei. Qui delenit ocurreret voluptatibus eu, dicunt accommodare vix an. Ne cibo veritus pro, et propriae maluisset nec. Patrioque eloquentiam te sed. Nam ex iusto graeci, no labitur epicurei efficiendi vis, sint sensibus sadipscing ex has.</p>
@@ -47,7 +47,7 @@
 <p>Est modo platonem pertinacia at, te mei nihil choro mentitum. Eam cu facer salutatus. Mel prima apeirian ei. No alterum ancillae mea. At vix suas utinam. Eos ne dissentiunt interpretaris.</p>
 </div>
 
-<div *ngSwitchCase="3">
+<div *ngSwitchCase="3" class="post">
 <p>Lorem ipsum dolor sit amet, sit te munere mnesarchum, est eu vidit solet impedit. Discere mandamus quo cu, ad saepe placerat eam, utinam possit mollis ex usu. Tation facilisis constituam vim id, at sea nullam sensibus efficiantur. Ne eum autem adipiscing, solum zril periculis mea ex. Ei dico esse essent eum, qui mucius voluptua cu. Ea per maiorum ancillae lobortis, cum omnis assum constituto an.</p>
 
 <p>Sea possit mandamus ei. Qui delenit ocurreret voluptatibus eu, dicunt accommodare vix an. Ne cibo veritus pro, et propriae maluisset nec. Patrioque eloquentiam te sed. Nam ex iusto graeci, no labitur epicurei efficiendi vis, sint sensibus sadipscing ex has.</p>
