--- a/src/app/post.component.html
+++ b/src/app/post.component.html
@@ -1,7 +1,8 @@
+<div *ngIf="post$ | async as post">
 <h1>{{post.title}}</h1>
 <h3>{{post.date | date}}</h3>
 
-<div [ngSwitch]="postID">
+<div [ngSwitch]="post.id">
 
 <div *ngSwitchCase="1" class="post">
 <p>Lorem ipsum dolor sit amet, sit te munere mnesarchum, est eu vidit solet impedit. Discere mandamus quo cu, ad saepe placerat eam, utinam possit mollis ex usu. Tation facilisis constituam vim id, at sea nullam sensibus efficiantur. Ne eum autem adipiscing, solum zril periculis mea ex. Ei dico esse essent eum, qui mucius voluptua cu. Ea per maiorum ancillae lobortis, cum omnis assum constituto an.</p>
