Adding PostNavComponent (not complete yet)
- Added component
- See “ToDo” list in post-nav.component.ts for complete list of to do
items

--- a/src/app/post.component.html
+++ b/src/app/post.component.html
@@ -1,4 +1,5 @@
 <div *ngIf="post$ | async as post">
+<post-nav [postID]="post.id"></post-nav>
 <h1>{{post.title}}</h1>
 <h3>{{post.date | date}}</h3>
 
