Finishing post-nav base functionality
- Put in guard for newerPostID so you don’t go over the top
- Changed postID to be a number, and the input is a string, to
eliminate some confusion in the code
- Had to make public the “getPosts()” function in the service because I
needed it to get the post length in the Post component.

Still need to style the nav and add transitions but it seems like the
basic functionality is working.

--- a/src/app/post.component.html
+++ b/src/app/post.component.html
@@ -1,7 +1,8 @@
 <div *ngIf="post$ | async as post">
-<post-nav [postID]="post.id"></post-nav>
+<post-nav [postIDInput]="post.id" [numOfPosts]="postsLength"></post-nav>
 <h1>{{post.title}}</h1>
 <h3>{{post.date | date}}</h3>
+
 
 <div [ngSwitch]="post.id">
 
