--- a/src/app/post.component.html
+++ b/src/app/post.component.html
@@ -1,8 +1,6 @@
 <div *ngIf="post$ | async as post">
 <post-nav [postIDInput]="post.id" [numOfPosts]="postsLength"></post-nav>
-<h1>{{post.title}}</h1>
-<h3>{{post.date | date}}</h3>
-
+<h2><i>{{post.date | date}}</i> - {{post.title}}</h2>
 
 <div [ngSwitch]="post.id">
 
@@ -71,5 +69,8 @@
 
 <p>Est modo platonem pertinacia at, te mei nihil choro mentitum. Eam cu facer salutatus. Mel prima apeirian ei. No alterum ancillae mea. At vix suas utinam. Eos ne dissentiunt interpretaris.</p>
 </div>
+
+<div *ngSwitchCase="4" class="post">
+<p>Lorem ipsum dolor sit amet, sit te munere mnesarchum, est eu vidit solet impedit. Discere mandamus quo cu, ad saepe placerat eam, utinam possit mollis ex usu. Tation facilisis constituam vim id, at sea nullam sensibus efficiantur. Ne eum autem adipiscing, solum zril periculis mea ex. Ei dico esse essent eum, qui mucius voluptua cu. Ea per maiorum ancillae lobortis, cum omnis assum constituto an.</p>
 
 </div>
