--- a/src/app/footer.component.css
+++ b/src/app/footer.component.css
@@ -9,7 +9,7 @@
     color: #fff;
     text-decoration: none;
     font-size: 25px;
-    padding: 0 10px 20px 10px;
+    padding: 10px;
 }
 .center-container {
 	display: -webkit-flexbox;
