Made links more intuitive to use
- Fixed cursor issue on homepage (Angular Material was writing over the
CSS)
- Added a color transition to links when you hover over them to let you
know they are clickable

--- a/src/app/footer.component.css
+++ b/src/app/footer.component.css
@@ -10,6 +10,11 @@
     text-decoration: none;
     font-size: 25px;
     padding: 10px;
+    transition: color 0.5s;
+}
+.footer a:hover {
+  color: #b285e0;
+  transition: color 0.5s;
 }
 .center-container {
 	display: -webkit-flexbox;
