--- a/src/app/post-nav.component.css
+++ b/src/app/post-nav.component.css
@@ -4,3 +4,11 @@
 	justify-content: space-between;
 	margin: 0 10px;
 }
+.flex-container a {
+	color: #fff;
+	transition: color 0.5s;
+}
+.flex-container a:hover {
+  color: #b285e0;
+  transition: color 0.5s;
+}
