--- a/src/app/footer.component.css
+++ b/src/app/footer.component.css
@@ -13,7 +13,7 @@
     transition: color 0.5s;
 }
 .footer a:hover {
-  color: #b285e0;
+  color: #eee;
   transition: color 0.5s;
 }
 .center-container {
