--- a/src/app/header.component.html
+++ b/src/app/header.component.html
@@ -1,3 +1,3 @@
 <div class="center-container">
-	<a mat-list-item routerLink="/home" routerLinkActive="active"><img [src]="logo" class="logo"></a>
+	<a mat-list-item routerLink="/blog/home" routerLinkActive="active"><img [src]="logo" class="logo"></a>
 </div>
