--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -9,73 +9,18 @@
 <div [ngSwitch]="post.id">
 
 <div *ngSwitchCase="1" class="post">
-<p>Lorem ipsum dolor sit amet, sit te munere mnesarchum, est eu vidit solet impedit. Discere mandamus quo cu, ad saepe placerat eam, utinam possit mollis ex usu. Tation facilisis constituam vim id, at sea nullam sensibus efficiantur. Ne eum autem adipiscing, solum zril periculis mea ex. Ei dico esse essent eum, qui mucius voluptua cu. Ea per maiorum ancillae lobortis, cum omnis assum constituto an.</p>
 
-<p>Sea possit mandamus ei. Qui delenit ocurreret voluptatibus eu, dicunt accommodare vix an. Ne cibo veritus pro, et propriae maluisset nec. Patrioque eloquentiam te sed. Nam ex iusto graeci, no labitur epicurei efficiendi vis, sint sensibus sadipscing ex has.</p>
+<p>Hi there.  I'm Marla!</p>
 
-<p>Molestie invidunt principes eos at, sed graece evertitur scripserit id. Impedit accusata id usu, no nec nominavi praesent. An unum fastidii mei, in his tale ancillae, no iusto vituperata signiferumque pri. Ad antiopam qualisque eum, maiorum blandit eum ne. Ut elitr verterem duo. No civibus tibique salutatus vel, ut vero luptatum abhorreant mea. Nec an omnium regione offendit, pri case illud latine id, erant ceteros sed eu.</p>
+<p>Here's my life story in one run-on sentence: Grew up in Ohio, went to University of Illinois for school, was an Electrical Engineer for a few years, a Software Quality Assurance engineer for (quite) a few more, now I'm learning Angular web development and chillaxing in Omaha, Nebraska with my 5 year old son and my (not 5 year old) husband.  If you want to know more about me, either professional or personal, you can head on over to my LinkedIn page, Github where this blog is hosted, or Twitter where I put my random thoughts.</p>
 
-<p>Detracto nominavi torquatos ei sit. Duo erat summo verterem cu, latine rationibus et vim. Id eos adhuc idque definiebas, ex cum ferri graeci saperet, sea magna posse quaerendum ne. Te vis aliquam assueverit complectitur.</p>
+<p>About the blog - made it entirely myself.  A labor of love.  I used Angular 5.ish (upgraded from 4 to 5 in the middle of blog creation) => TypeScript => JavaScript.  The styling uses Angular Material a little bit.  This website is going to be an evolving thing, because I just enjoy tinkering on it so much, so expect to see some changes to make it better and better :)</p>
 
-<p>His ea scripserit deterruisset. Nullam diceret tacimates no per, epicurei legendos at his. Soleat nostrum cum eu. Ei his volumus delectus delicata, lorem tractatos appellantur ei has, cu feugiat invenire vel. Sea ea maiorum deserunt democritum. Eum enim denique an, sapientem disputationi concludaturque duo ex, movet vulputate scriptorem no pri. Nostrud efficiantur reprehendunt eum at, per ne quidam accusamus.</p>
+<p>Thanks for reading,</p>
 
-<p>Mei at audire fabellas, cu eos essent diceret, eum cu saepe ignota impedit. Tation nostrud accommodare cu mei, vel everti alterum signiferumque in. Sed mentitum apeirian corrumpit ex, ne sale corrumpit per. Quod corpora pri no. Ea eam nobis perfecto partiendo, mei nostrud oporteat indoctum at.</p>
+<p>Marla</p>
 
-<p>Cu dicant interpretaris eos, duo ut illud ponderum tractatos. Nam et suscipiantur intellegebat, te dicunt quaestio pro, ea partem torquatos sea. Eos veritus scripserit sadipscing ut, mea nihil quodsi theophrastus ad. Vis dicit melius adversarium an, ea mei justo pertinax.</p>
-
-<p>Enim assum melius eu mel, euismod delicata vel eu. Cu dignissim instructior qui, in mei nobis habemus democritum. Nec modus insolens cotidieque ei. Ut fabulas suscipit argumentum vis, no suavitate accusamus persequeris qui. Te nec habeo admodum ocurreret, cum movet elitr ne. Ut vis agam zril animal, cu pri probo minimum officiis.</p>
-
-<p>Eum ea reprimique percipitur. Cum ubique aperiri maluisset no, natum fastidii conceptam pri ne, nibh volutpat sed ad. Ex eos dicant volumus accommodare, mea mazim nonumes in. Mea sint facilisis an, eripuit laboramus vix ex. Ei eam vide homero, pri congue interesset at, eu civibus mentitum laboramus ius.</p>
-
-<p>Est modo platonem pertinacia at, te mei nihil choro mentitum. Eam cu facer salutatus. Mel prima apeirian ei. No alterum ancillae mea. At vix suas utinam. Eos ne dissentiunt interpretaris.</p>
 </div>
-
-<div *ngSwitchCase="2" class="post">
-<p>Lorem ipsum dolor sit amet, sit te munere mnesarchum, est eu vidit solet impedit. Discere mandamus quo cu, ad saepe placerat eam, utinam possit mollis ex usu. Tation facilisis constituam vim id, at sea nullam sensibus efficiantur. Ne eum autem adipiscing, solum zril periculis mea ex. Ei dico esse essent eum, qui mucius voluptua cu. Ea per maiorum ancillae lobortis, cum omnis assum constituto an.</p>
-
-<p>Sea possit mandamus ei. Qui delenit ocurreret voluptatibus eu, dicunt accommodare vix an. Ne cibo veritus pro, et propriae maluisset nec. Patrioque eloquentiam te sed. Nam ex iusto graeci, no labitur epicurei efficiendi vis, sint sensibus sadipscing ex has.</p>
-
-<p>Molestie invidunt principes eos at, sed graece evertitur scripserit id. Impedit accusata id usu, no nec nominavi praesent. An unum fastidii mei, in his tale ancillae, no iusto vituperata signiferumque pri. Ad antiopam qualisque eum, maiorum blandit eum ne. Ut elitr verterem duo. No civibus tibique salutatus vel, ut vero luptatum abhorreant mea. Nec an omnium regione offendit, pri case illud latine id, erant ceteros sed eu.</p>
-
-<p>Detracto nominavi torquatos ei sit. Duo erat summo verterem cu, latine rationibus et vim. Id eos adhuc idque definiebas, ex cum ferri graeci saperet, sea magna posse quaerendum ne. Te vis aliquam assueverit complectitur.</p>
-
-<p>His ea scripserit deterruisset. Nullam diceret tacimates no per, epicurei legendos at his. Soleat nostrum cum eu. Ei his volumus delectus delicata, lorem tractatos appellantur ei has, cu feugiat invenire vel. Sea ea maiorum deserunt democritum. Eum enim denique an, sapientem disputationi concludaturque duo ex, movet vulputate scriptorem no pri. Nostrud efficiantur reprehendunt eum at, per ne quidam accusamus.</p>
-
-<p>Mei at audire fabellas, cu eos essent diceret, eum cu saepe ignota impedit. Tation nostrud accommodare cu mei, vel everti alterum signiferumque in. Sed mentitum apeirian corrumpit ex, ne sale corrumpit per. Quod corpora pri no. Ea eam nobis perfecto partiendo, mei nostrud oporteat indoctum at.</p>
-
-<p>Cu dicant interpretaris eos, duo ut illud ponderum tractatos. Nam et suscipiantur intellegebat, te dicunt quaestio pro, ea partem torquatos sea. Eos veritus scripserit sadipscing ut, mea nihil quodsi theophrastus ad. Vis dicit melius adversarium an, ea mei justo pertinax.</p>
-
-<p>Enim assum melius eu mel, euismod delicata vel eu. Cu dignissim instructior qui, in mei nobis habemus democritum. Nec modus insolens cotidieque ei. Ut fabulas suscipit argumentum vis, no suavitate accusamus persequeris qui. Te nec habeo admodum ocurreret, cum movet elitr ne. Ut vis agam zril animal, cu pri probo minimum officiis.</p>
-
-<p>Eum ea reprimique percipitur. Cum ubique aperiri maluisset no, natum fastidii conceptam pri ne, nibh volutpat sed ad. Ex eos dicant volumus accommodare, mea mazim nonumes in. Mea sint facilisis an, eripuit laboramus vix ex. Ei eam vide homero, pri congue interesset at, eu civibus mentitum laboramus ius.</p>
-
-<p>Est modo platonem pertinacia at, te mei nihil choro mentitum. Eam cu facer salutatus. Mel prima apeirian ei. No alterum ancillae mea. At vix suas utinam. Eos ne dissentiunt interpretaris.</p>
-</div>
-
-<div *ngSwitchCase="3" class="post">
-<p>Lorem ipsum dolor sit amet, sit te munere mnesarchum, est eu vidit solet impedit. Discere mandamus quo cu, ad saepe placerat eam, utinam possit mollis ex usu. Tation facilisis constituam vim id, at sea nullam sensibus efficiantur. Ne eum autem adipiscing, solum zril periculis mea ex. Ei dico esse essent eum, qui mucius voluptua cu. Ea per maiorum ancillae lobortis, cum omnis assum constituto an.</p>
-
-<p>Sea possit mandamus ei. Qui delenit ocurreret voluptatibus eu, dicunt accommodare vix an. Ne cibo veritus pro, et propriae maluisset nec. Patrioque eloquentiam te sed. Nam ex iusto graeci, no labitur epicurei efficiendi vis, sint sensibus sadipscing ex has.</p>
-
-<p>Molestie invidunt principes eos at, sed graece evertitur scripserit id. Impedit accusata id usu, no nec nominavi praesent. An unum fastidii mei, in his tale ancillae, no iusto vituperata signiferumque pri. Ad antiopam qualisque eum, maiorum blandit eum ne. Ut elitr verterem duo. No civibus tibique salutatus vel, ut vero luptatum abhorreant mea. Nec an omnium regione offendit, pri case illud latine id, erant ceteros sed eu.</p>
-
-<p>Detracto nominavi torquatos ei sit. Duo erat summo verterem cu, latine rationibus et vim. Id eos adhuc idque definiebas, ex cum ferri graeci saperet, sea magna posse quaerendum ne. Te vis aliquam assueverit complectitur.</p>
-
-<p>His ea scripserit deterruisset. Nullam diceret tacimates no per, epicurei legendos at his. Soleat nostrum cum eu. Ei his volumus delectus delicata, lorem tractatos appellantur ei has, cu feugiat invenire vel. Sea ea maiorum deserunt democritum. Eum enim denique an, sapientem disputationi concludaturque duo ex, movet vulputate scriptorem no pri. Nostrud efficiantur reprehendunt eum at, per ne quidam accusamus.</p>
-
-<p>Mei at audire fabellas, cu eos essent diceret, eum cu saepe ignota impedit. Tation nostrud accommodare cu mei, vel everti alterum signiferumque in. Sed mentitum apeirian corrumpit ex, ne sale corrumpit per. Quod corpora pri no. Ea eam nobis perfecto partiendo, mei nostrud oporteat indoctum at.</p>
-
-<p>Cu dicant interpretaris eos, duo ut illud ponderum tractatos. Nam et suscipiantur intellegebat, te dicunt quaestio pro, ea partem torquatos sea. Eos veritus scripserit sadipscing ut, mea nihil quodsi theophrastus ad. Vis dicit melius adversarium an, ea mei justo pertinax.</p>
-
-<p>Enim assum melius eu mel, euismod delicata vel eu. Cu dignissim instructior qui, in mei nobis habemus democritum. Nec modus insolens cotidieque ei. Ut fabulas suscipit argumentum vis, no suavitate accusamus persequeris qui. Te nec habeo admodum ocurreret, cum movet elitr ne. Ut vis agam zril animal, cu pri probo minimum officiis.</p>
-
-<p>Eum ea reprimique percipitur. Cum ubique aperiri maluisset no, natum fastidii conceptam pri ne, nibh volutpat sed ad. Ex eos dicant volumus accommodare, mea mazim nonumes in. Mea sint facilisis an, eripuit laboramus vix ex. Ei eam vide homero, pri congue interesset at, eu civibus mentitum laboramus ius.</p>
-
-<p>Est modo platonem pertinacia at, te mei nihil choro mentitum. Eam cu facer salutatus. Mel prima apeirian ei. No alterum ancillae mea. At vix suas utinam. Eos ne dissentiunt interpretaris.</p>
-</div>
-
-<div *ngSwitchCase="4" class="post">
-<p>Lorem ipsum dolor sit amet, sit te munere mnesarchum, est eu vidit solet impedit. Discere mandamus quo cu, ad saepe placerat eam, utinam possit mollis ex usu. Tation facilisis constituam vim id, at sea nullam sensibus efficiantur. Ne eum autem adipiscing, solum zril periculis mea ex. Ei dico esse essent eum, qui mucius voluptua cu. Ea per maiorum ancillae lobortis, cum omnis assum constituto an.</p>
 
 </div>
 </div>
