--- a/src/app/core/footer.component.css
+++ b/src/app/core/footer.component.css
@@ -3,27 +3,8 @@
     width: 100%;
     bottom: 0px;
     background-color: #85E0E0;
-    opacity: 1;
     }
 .footer a {
-    color: #fff;
-    text-decoration: none;
     font-size: 25px;
-    padding: 10px;
-    transition: color 0.5s;
-}
-.footer a:hover {
-  color: #eee;
-  transition: color 0.5s;
-}
-.center-container {
-	display: -webkit-flexbox;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    -webkit-flex-align: center;
-    -ms-flex-align: center;
-    -webkit-align-items: center;
-	align-items: center;
-    justify-content: center;
+    padding: 0 10px;
 }
