--- a/src/app/core/header.component.css
+++ b/src/app/core/header.component.css
@@ -1,16 +1,4 @@
-.center-container {
-	display: -webkit-flexbox;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    -webkit-flex-align: center;
-    -ms-flex-align: center;
-    -webkit-align-items: center;
-	align-items: center;
-    justify-content: center;
-    padding: 20px 0;
-}
-img.logo {
+img.logo { /*mobile*/
     max-width: 90%;
     height: auto;
 }
