--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="post$ | async as post">
+<div *ngIf="post$ | async as post" class="post-container">
 
 <post-nav [postIDInput]="post.id" [numOfPosts]="postsLength"></post-nav>
 
@@ -8,7 +8,7 @@
 
 <div [ngSwitch]="post.id">
 
-<div *ngSwitchCase="1" class="post">
+<div *ngSwitchCase="1">
 
 <p>Hi there.  I'm Marla!</p>
 
