--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -1,4 +1,6 @@
-<div *ngIf="post$ | async as post" class="post-container">
+
+
+<div *ngIf="post$ | async as post" class="container">
 
 <post-nav [postIDInput]="post.id" [numOfPosts]="postsLength"></post-nav>
 
