--- a/src/styles.css
+++ b/src/styles.css
@@ -35,3 +35,13 @@ a:hover {
 h2 { /* Safari adjustment */
 	font-weight: normal;
 }
+
+.container { /* mobile */
+	margin: 0 0 100px 0;
+}
+
+@media only screen and (min-width: 800px) { /*desktop*/
+	.container {
+		margin: 0 56px 100px 56px;
+	}
+}
