--- a/src/styles.css
+++ b/src/styles.css
@@ -14,6 +14,14 @@ a {
 	transition: color 0.5s;
 }
 
+p {
+	color: #fff;
+}
+
+p:hover {
+	cursor: default;
+}
+
 a:hover {
 	color: #eee;
 	transition: color 0.5s;
