Removing unnecessary functionality
- Removed “show more” functionality for now
- Removed unnecessary imports
- Removed old code that was doing observables in a way that is
different from how I am doing it now

--- a/src/app/home.component.html
+++ b/src/app/home.component.html
@@ -1,14 +1,11 @@
 <mat-list class="post-list container">
-	<div *ngFor="let myg of monthYear">
-		<h2>{{myg}}</h2>
+	<div *ngFor="let MY of monthYear">
+		<h2>{{MY}}</h2>
 	<div *ngFor="let post of posts$ | async">
-	  	<mat-list-item *ngIf="post.monthYear == myg">
+	  	<mat-list-item *ngIf="post.monthYear == MY">
 	  		<a matLine (click)=goToPost(post)>{{post.title}}</a>
 	  		<p matLine><i>{{post.date | date}}</i></p>
 	  	</mat-list-item>
   	</div>
-  	</div>
-  	<div *ngIf="posts$ | async as posts">
-  		<a mat-list-item *ngIf="posts.length < postsLength" (click)="showMore(posts.length)">Show More...</a>
   	</div>
 </mat-list>
