--- a/src/app/core/header.component.css
+++ b/src/app/core/header.component.css
@@ -1,10 +1,12 @@
 img.logo { /*mobile*/
     max-width: 90%;
     height: auto;
+    padding: 20px 0;
 }
 
 @media only screen and (min-width: 300px) { /*desktop*/
     img.logo {
         width: 300px;
+        padding: 20px 0;
     }
 }
