Added MonthYear filtering functionality to Home component
- Added service to handle MonthYear requests, since both the Home and
Header components use it
- Now when you click on a month in the Home Component, it will filter
down to the selected month
- Clicking on the header logo refreshes the page to show all posts

Need to add:
- Fade in animation for filtering posts
- Possibly “show all” button on home component to show all posts again

--- a/src/app/core/header.component.html
+++ b/src/app/core/header.component.html
@@ -1,3 +1,7 @@
 <div class="center-container">
-	<a mat-list-item routerLink="/home" routerLinkActive="active"><img [src]="logo" class="logo"></a>
+	<a mat-list-item 
+	routerLink="/home" routerLinkActive="active"
+	(click)="headerClick()">
+		<img [src]="logo" class="logo">
+	</a>
 </div>
