--- a/src/app/home.component.html
+++ b/src/app/home.component.html
@@ -1,7 +1,9 @@
 <mat-list class="post-list container">
 	<div [@monthYearChangeAnimation]="this.myService.monthYear">
 		<div class="monthYearGroup" *ngFor="let MY of this.myService.monthYear">
-			<a (click)="this.myService.filter2MonthYear(MY)"><h2>{{MY | uppercase}}</h2></a>
+			<a (click)="this.myService.filter2MonthYear(MY)">
+				<h2>{{MY | uppercase}}</h2>
+			</a>
 			<div *ngFor="let post of posts$ | async">
 			  	<mat-list-item *ngIf="post.monthYear == MY">
 			  		<div matListAvatar class="avatar center-container">
