Adding "Show All Posts" to filtering by monthyear
- If you’ve filtered the posts by monthYear, clicking “Show All” will
show all your posts, same as clicking the header would do

--- a/src/app/home.component.html
+++ b/src/app/home.component.html
@@ -12,6 +12,10 @@
 			  		<a matLine class="post-title" (click)=goToPost(post)>{{post.title}}</a>
 			  	</mat-list-item>
 		  	</div>
+		  	<br>
+		  	<a *ngIf="this.myService.showAll == true" (click)="this.showAllClick()">
+		  		Show All Posts
+		  	</a>
 	  	</div>
   	</div>
 </mat-list>
