--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -17,6 +17,34 @@
 		<p>About the blog - made it entirely myself.  A labor of love.  I used Angular 5.ish (upgraded from 4 to 5 in the middle of blog creation) => TypeScript => JavaScript.  The styling uses Angular Material a little bit.  This website is going to be an evolving thing, because I just enjoy tinkering with it so much, so expect to see some changes to make it better and better :)</p>
 
 	</div>
+
+	<div *ngSwitchCase="2">
+
+		<p>First of all, seeing as how I missed Christmas and New Years with this blog... I hope anyone reading this had a great holiday season and a happy New Year!  I personally am very excited for 2018!</p>
+
+		<p>Ironically, eating-my-own-dogfood-ly, possibly stupidly, I am learning to be a web developer by developing this very blog you are reading... but it is getting pretty annoying having to put in test posts all the time to test out the doohickys I am making.  So I figured I would write an ACTUAL FACTUAL blog post, to fill things out a bit and to keep me away from tinkering on the blog for a second (I really need to start writing unit tests but I CAN'T. STOP. TINKERING.)</p>
+
+		<p>As I mentioned in my "About Me" blog post, I am learning web development in Angular.  Learning it by going through the Angular Docs (https://angular.io/).  Angular recently (early 2016ish) decided to switch over to using RXJS Observables for a lot of their built-in functionality (routing and http are the big ones I can think of off the cuff), and they hammer them a LOT in the docs.  Practically every cookbook has at least one Observable used in it.  Fulfilled Promises are nowhere to be found, just like in real life (sorry, professional dad-jokester here).  They're a little tricky, I definitely used them the wrong way more than once, and it's kind of hard to find a good explanation that is easy to understand about WHY Angular is so into them.  I'll tackle this subject and give you my take on it.</p>
+
+		<p>The first thing to talk about is, what is this Observable thing?  Well, before RX Observables came the Observer design pattern, so let's describe that.  I like to think of it like a magazine.  Let's say that the Observable (also called a Subject) is Forbes magazine, and the Subscribers are people like me who want to get Forbes in the mail.  To get Forbes, I would have to subscribe to the magazine by sending in a subscription form.  When Forbes is ready to produce a new issue, they know I want it so they will mail it to me, and the magazine will arrive at my door.  That's the design pattern in a nutshell.</p>
+
+		<p>You can also think of it kind of like a "stream" of data, or like an array.  This analogy makes sense to me, but I feel it is a little flawed, because you can't really get to any of the "older issues," like you could in an array.  So I don't love that one, but it seems to work for a lot of people, so I thought I'd mention it.</p>
+
+		<p>I believe the "Gang of Four" (otherwise known as the "Design Patterns: Elements of Reusable Object-Oriented Software" book) was the originator of the Observer design pattern (don't quote me on that).  But then a library was developed to allow people to actually create and use this pattern in many languages: ReactiveX (http://reactivex.io/).  When I talk about RxJS Observables, RxJS is the javaScript version of the ReactiveX library.</p>
+
+		<p>So, back to the main question of this post, and the question I struggled with for a while... why use Observables?  There are a few reasons.  It streamlines code.  Rob Wormald gave a talk back when this was first rolling out in Angular (I'll link it in the References at the end) where he talks about writing code for a typeahead.  He wrote it both with and without Observables.  In the Observable-free one, he had to write a debouncing function and a few other helper functions to go along with it.  In the Observable one, they already have those operators built in, so the code was a lot shorter, cleaner, and you gotta assume that Rx knows what they're doing so it's less bug-prone than writing your own functions.  On that note, the operators are another reason why Observables are cool.  There are a lot of them, and they are similar to ones you have probably already used for arrays, so it is pretty easy to get going with them.  The final reason to use them is speed and efficiency.  Your subscribers don't have to go polling for updates all the time... they can just sit back, relax, have a cup of tea, and wait for their new issue of "userArray" to come to them when it is updated.</p>
+
+		Here are references for mentioned sources (and some others that are just plain useful):
+			<ul>
+				<li><a href="https://www.amazon.com/Design-Patterns-Object-Oriented-Addison-Wesley-Professional-ebook/dp/B000SEIBB8"><i>Design Patterns: Elements of Reusable Object-Oriented Software</i> book (aka Gang of Four)</a></li>
+				<li><a href="http://reactivex.io/intro.html">ReactiveX Intro</a></li>
+				<li><a href="https://vimeo.com/144625829">Rob Wormald's talk about Observables</a></li>
+				<li><a href="https://coryrylan.com/blog/angular-observable-data-services">Cory Rylan blog post on how to implement Observables</a> (which we'll talk more about next time)</li>
+			</ul>
+		
+		<p>That's it for today!  The next blog post will be about useful Rx operators, and how to actually implement Observables in an application.  See you then!</p>
+
+	</div>
 	
 </div>
 
