Changing container -> my-container in styles.css

--- a/src/app/email.component.html
+++ b/src/app/email.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="my-container">
 	<h1>Email me!</h1>
 	<form [formGroup]="emailForm" (ngSubmit)="onSubmit()" novalidate>
 		<mat-form-field>
