--- a/src/styles.css
+++ b/src/styles.css
@@ -7,6 +7,12 @@ html {
 	color: #fff;
 }
 
+body {
+	background-color: #85E0E0;
+	font-family: 'PT Sans', sans-serif;
+	color: #fff;
+}
+
 a {
 	text-decoration: none;
 	color: #fff;
