--- a/src/styles.css
+++ b/src/styles.css
@@ -51,12 +51,12 @@ h2 { /* Safari adjustment */
 	font-size: 20px;
 }
 
-.my-container { /* mobile */
-	margin: 0 0 100px 0;
+.container { /* mobile */
+	margin-bottom: 100px;
 }
 
 @media only screen and (min-width: 800px) { /*desktop*/
-	.my-container {
-		margin: 0 56px 100px 56px;
+	.container {
+		margin-bottom: 100px;
 	}
 }
