--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="post$ | async as post" class="my-container">
+<div *ngIf="post$ | async as post" class="container">
 
 <post-nav [postIDInput]="post.id" [numOfPosts]="postsLength"></post-nav>
 
