--- a/src/app/home.component.html
+++ b/src/app/home.component.html
@@ -5,7 +5,7 @@
 				<h2>{{MY | uppercase}}</h2>
 			</a>
 			<div *ngFor="let post of posts$ | async">
-			  	<mat-list-item *ngIf="post.monthYear == MY">
+			  	<mat-list-item *ngIf="post.monthYear == MY" class="post">
 			  		<div matListAvatar class="avatar center-container">
 			  			<p class="date">{{post.date | date:'dd'}}</p>
 			  		</div>
