--- a/src/app/home.component.css
+++ b/src/app/home.component.css
@@ -7,6 +7,7 @@
 
 .post-list .post-title {
   font-style: italic;
+  white-space: normal;
 }
 
 .post-list a {
@@ -19,5 +20,5 @@
 
 .post-list .avatar .date { 
 	margin: 0;
-	font-size: 20px;
+	font-size: 35px;
 }
