--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -20,7 +20,7 @@
 
 	<div *ngSwitchCase="2">
 
-		<p>First of all, seeing as how I missed Christmas and New Years with this blog... I hope anyone reading this had a great holiday season and a happy New Year!  I personally am very excited for 2018!</p>
+		<p>First of all, since I missed Christmas and New Years with this blog... I hope anyone reading this had a great holiday season and a happy New Year!  I personally am very excited for 2018!</p>
 
 		<p>Ironically, eating-my-own-dogfood-ly, possibly stupidly, I am learning to be a web developer by developing this very blog you are reading... but it is getting pretty annoying having to put in test posts all the time to test out the doohickys I am making.  So I figured I would write an actual factual blog post, to fill things out a bit and to keep me away from tinkering on the blog for a second (I really need to start writing unit tests but I CAN'T. STOP. TINKERING.)</p>
 
