--- a/src/app/home.component.css
+++ b/src/app/home.component.css
@@ -1,5 +1,3 @@
-/*everywhere*/
-
 .post-list a:hover {
   color: #eee;
   transition: color 0.5s;
@@ -16,9 +14,16 @@
   font-size: 20px;
   cursor: pointer;
   transition: color 0.5s;
+  background-color: #85E0E0;
+  border: none;
 }
 
 .post-list .avatar .date { 
 	margin: 0;
 	font-size: 35px;
+}
+
+li {
+  background-color: #85E0E0;
+  border: none;
 }
