--- a/src/app/home.component.html
+++ b/src/app/home.component.html
@@ -1,3 +1,21 @@
+<ul class="list-group post-list container">
+	<li class="list-group-item" [@monthYearChangeAnimation]="this.myService.monthYear">
+		<div class="monthYearGroup" *ngFor="let MY of this.myService.monthYear">
+			<a (click)="this.myService.filter2MonthYear(MY)">
+				<h2>{{MY | uppercase}}</h2>
+			</a>
+			<div *ngFor="let post of posts$ | async">
+				<div class="list-group" *ngIf="post.monthYear == MY">
+					<a class="list-group-item post-title" (click)=goToPost(post)>
+						{{post.title}}
+					</a>
+				</div>
+			</div>
+		</div>
+	</li>
+</ul>
+
+<!--
 <mat-list class="post-list container">
 	<div [@monthYearChangeAnimation]="this.myService.monthYear">
 		<div class="monthYearGroup" *ngFor="let MY of this.myService.monthYear">
@@ -19,3 +37,4 @@
 	  	</div>
   	</div>
 </mat-list>
+!-->
