--- a/src/app/home.component.css
+++ b/src/app/home.component.css
@@ -1,13 +1,3 @@
-.post-list a:hover {
-  color: #eee;
-  transition: color 0.5s;
-}
-
-.post-list .post-title {
-  font-style: italic;
-  white-space: normal;
-}
-
 .post-list a {
   color: #fff;
   font-family: 'PT Sans', sans-serif;
@@ -18,8 +8,19 @@
   border: none;
 }
 
-.post-list .avatar div { 
-	margin: 0;
+.post-list a:hover {
+  color: #eee;
+  transition: color 0.5s;
+}
+
+.post-list .post-title {
+  font-style: italic;
+  white-space: normal;
+  padding: 7.5px 0;
+}
+
+.post-list .avatar { 
+	margin: 0 10px 0 0;
 	font-size: 35px;
 }
 
