Changing post-nav component to use Bootstrap

--- a/src/app/post/post-nav.component.css
+++ b/src/app/post/post-nav.component.css
@@ -1,6 +1,12 @@
+/* Was able to achieve this using Bootstrap yay
 .flex-container {
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
 	margin: 10px 0px;
+}
+*/
+
+a {
+	text-decoration: none;
 }
