Updating Footer and Post CSS
- Footer uses Bootstrap flex container class now
- Post component, did a little tweaking on the post title

--- a/src/app/core/footer.component.html
+++ b/src/app/core/footer.component.html
@@ -1,4 +1,4 @@
-<div class="center-container footer">
+<div class="d-flex justify-content-center footer">
 	<a href="https://github.com/marla294" class="icon" target="_blank"><i class="fa fa-github"></i></a>
 	<a href="https://twitter.com/marla294" class="icon" target="_blank"><i class="fa fa-twitter"></i></a>
 	<a href="https://www.linkedin.com/in/marlaforeman/" class="icon" target="_blank"><i class="fa fa-linkedin"></i></a>
