--- a/src/app/core/footer.component.css
+++ b/src/app/core/footer.component.css
@@ -3,9 +3,9 @@
     width: 100%;
     bottom: 0px;
     background-color: #85E0E0;
-    padding: 20px 0;
+    padding: 10px 0;
     }
-.footer a {
+a {
     font-size: 25px;
     padding: 0 10px;
 }
