Changed Header to use Bootstrap classes

--- a/src/app/core/header.component.html
+++ b/src/app/core/header.component.html
@@ -1,4 +1,4 @@
-<div class="center-container">
+<div class="d-flex justify-content-center">
 	<a mat-list-item 
 	routerLink="/home" routerLinkActive="active"
 	(click)="headerClick()">
