Trying to grab PHP data - want to test on Github

--- a/src/app/email.component.html
+++ b/src/app/email.component.html
@@ -25,4 +25,5 @@
 	<p>Form value: {{emailForm.value | json}}</p>
 	<p>Form status: {{emailForm.status | json}}</p>
 	<p>Form pristine: {{emailForm.pristine | json}}</p>
+	<p>{{data}}</p>
 </div>
