Learning to PHP
This checkin is totally to prove to the world at large that I did
something the past 2 days.

--- a/src/app/email.component.html
+++ b/src/app/email.component.html
@@ -25,5 +25,7 @@
 	<p>Form value: {{emailForm.value | json}}</p>
 	<p>Form status: {{emailForm.status | json}}</p>
 	<p>Form pristine: {{emailForm.pristine | json}}</p>
+	<button class="btn btn-secondary" (click)="this.onDataSet()">Post</button>
+	<button class="btn btn-secondary" (click)="this.onDataLoad()">Get</button>
 	<p>{{data}}</p>
 </div>
